[gd_scene load_steps=15 format=3 uid="uid://h8uypvokmv1"]

[ext_resource type="Script" path="res://player.gd" id="1_c8y62"]
[ext_resource type="Script" path="res://laser.gd" id="2_wmbsv"]
[ext_resource type="Script" path="res://charge_bar_holder.gd" id="3_0a3ru"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gvsp7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5amj"]
size = Vector2(22, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_27pbm"]
size = Vector2(800, 20)

[sub_resource type="Curve" id="Curve_y3d8c"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 0.760097), 0.0, 0.0, 0, 0, Vector2(0.333962, 1), -1.64505, -1.64505, 0, 0, Vector2(0.888679, 0.090181), -1.29947, -1.29947, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_iwq5t"]
curve = SubResource("Curve_y3d8c")

[sub_resource type="Curve" id="Curve_eiuf3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_vq1ex"]
curve = SubResource("Curve_eiuf3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4eed3"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 180.0
orbit_velocity_min = -0.0999999
orbit_velocity_max = 0.1
gravity = Vector3(0, 0, 0)
radial_accel_min = -50.0
radial_accel_max = -2.0
scale_min = 0.2
scale_max = 1.2
scale_curve = SubResource("CurveTexture_vq1ex")
alpha_curve = SubResource("CurveTexture_iwq5t")

[sub_resource type="Animation" id="Animation_yhui8"]
resource_name = "beam_expand"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LaserBeam:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(-378, 0, -378, 0, 10.304, 0, 399, 0, 399, 0), PackedVector2Array(-378, -10, -378, 8, 10.3043, 7.99999, 399, 8, 399, -10)]
}

[sub_resource type="Animation" id="Animation_cae6p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LaserBeam:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-378, -9, -378, 8, 10.3043, 7.99999, 399, 8, 399, -10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_43d6w"]
_data = {
"RESET": SubResource("Animation_cae6p"),
"beam_expand": SubResource("Animation_yhui8")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 13
motion_mode = 1
script = ExtResource("1_c8y62")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gvsp7")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-10, -10, -10, 10, 10, 10, 10, -10)

[node name="HitBox" type="Area2D" parent="."]

[node name="HitCollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_t5amj")

[node name="Laser" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 4
script = ExtResource("2_wmbsv")

[node name="LaserCollider" type="CollisionShape2D" parent="Laser"]
position = Vector2(390, 0)
shape = SubResource("RectangleShape2D_27pbm")

[node name="LaserBeam" type="Polygon2D" parent="Laser"]
position = Vector2(389, 1)
polygon = PackedVector2Array(-378, -9, -378, 8, 10.3043, 7.99999, 399, 8, 399, -10)

[node name="LaserChargeParticles" type="GPUParticles2D" parent="Laser"]
amount = 250
process_material = SubResource("ParticleProcessMaterial_4eed3")
lifetime = 2.0
trail_enabled = true
trail_lifetime = 0.2

[node name="ChargeBarHolder" type="Node2D" parent="Laser"]
script = ExtResource("3_0a3ru")

[node name="LaserChargeBar" type="ProgressBar" parent="Laser/ChargeBarHolder"]
offset_left = -58.0
offset_top = -21.0
offset_right = 58.0
offset_bottom = -15.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Laser"]
libraries = {
"": SubResource("AnimationLibrary_43d6w")
}

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="Laser" to="Laser" method="_on_body_entered"]
